kubernetes/apps/monitoring/victorialogs/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vlogs
spec:
  hostnames: ["vlogs.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: victorialogs
          namespace: monitoring
          port: 9428
